- Added navigation for Maven Best Practice.

--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -2,4 +2,5 @@
   <li><a href="{{ root_url }}/">Blog</a></li>
   <li><a href="{{ root_url }}/blog/archives/index.html">Archives</a></li>
   <li><a href="{{ root_url }}/impressum/index.html">Impressum</a></li>
+  <li><a href="{{ root_url }}/blog/categories/maven-best-practise/">Maven-Best-Practice</a></li>
 </ul>
