--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -4,4 +4,5 @@
   <li><a href="{{ root_url }}/impressum/index.html">Impressum</a></li>
   <li><a href="{{ root_url }}/blog/categories/maven-best-practise/">Maven-Best-Practice</a></li>
   <li><a href="{{ root_url }}/blog/categories/maven-plugin-releases/">Maven Plugin Releases</a></li>
+  <li><a href="{{ root_url }}/blog/categories/programming/">Programming</a></li>
 </ul>
